--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
     <section class="CONTAIN">
         <div class="Basic">
             <h5>ABOUT US</h5>
-            <h2>Plumbing</h2>
-            <h1>Services</h1>
+            <div class="NEWDIV">
+                <h1>Plumbing Services </h1>
+            </div>
         </div>
   
             <div class="FourImages">
